--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,7 @@
 fixtures:
   repositories:
-    stdlib: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
     apt: "git://github.com/puppetlabs/puppetlabs-apt.git"
+    stdlib: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
+    yumrepo_core: "git://github.com/puppetlabs/puppetlabs-yumrepo_core.git"
   symlinks:
     yarn: "#{source_dir}"
