--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,8 @@
+# This file can be used to install module dependencies for unit testing
+# See https://github.com/puppetlabs/puppetlabs_spec_helper#using-fixtures for details
+---
 fixtures:
-  repositories:
-    stdlib: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
-    apt: "git://github.com/puppetlabs/puppetlabs-apt.git"
-  symlinks:
-    yarn: "#{source_dir}"
+  forge_modules:
+    stdlib: "puppetlabs/stdlib"
+    apt: "puppetlabs/apt"
+    yumrepo_core: "puppetlabs/yumrepo_core"
